--- a/assignment1/Task2/task2.ipynb
+++ b/assignment1/Task2/task2.ipynb
@@ -510,13 +510,18 @@
    "source": [
     "\n",
     "\n",
+    "\n",
     "def validate_model(model: nn.Module, val_loader: DataLoader, device: str = 'cuda' if torch.cuda.is_available() else 'cpu'):\n",
     "    model.eval()\n",
     "    criterion = nn.NLLLoss()\n",
     "    total_loss = 0.0\n",
     "    total_correct = 0\n",
     "    total_samples = 0\n",
+    "    total_cosine_sim = 0.0\n",
     "    num_batches = len(val_loader)\n",
+    "    \n",
+    "    # Cosine similarity function\n",
+    "    cos_sim = nn.CosineSimilarity(dim=1)\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        for context, target in val_loader:\n",
@@ -534,13 +539,22 @@
     "            predicted = output.argmax(dim=1)\n",
     "            total_correct += (predicted == target).sum().item()\n",
     "            total_samples += target.size(0)\n",
+    "            \n",
+    "            # Calculate cosine similarity\n",
+    "            # Get embeddings for predicted and target words\n",
+    "            predicted_embeddings = model.embeddings(predicted)\n",
+    "            target_embeddings = model.embeddings(target)\n",
+    "            \n",
+    "            # Calculate cosine similarity between predicted and target embeddings\n",
+    "            batch_cosine_sim = cos_sim(predicted_embeddings, target_embeddings).mean()\n",
+    "            total_cosine_sim += batch_cosine_sim.item()\n",
     "    \n",
     "    # Calculate average metrics\n",
     "    avg_loss = total_loss / num_batches\n",
     "    accuracy = (total_correct / total_samples) * 100\n",
+    "    avg_cosine_sim = total_cosine_sim / num_batches\n",
     "    \n",
-    "    return avg_loss, accuracy\n",
-    "\n",
+    "    return avg_loss, accuracy, avg_cosine_sim\n",
     "\n",
     "def evaluate_model(model, val_loader, device, dataset, BATCH_SIZE) :\n",
     "    model.eval()\n",
