updated codes and directory structure for task1 and task2

--- a/assignment1/task3-files/temp.ipynb
+++ b/assignment1/task3-files/temp.ipynb
@@ -503,7 +503,7 @@
     "    tokens = dataset.tokenizer.tokenize(sentence) #tokenize the input sentence\n",
     "    if len(tokens) < context_size:\n",
     "        pass #add padding tokens\n",
-    "    sentence_embeds = [dataset.word2vec.embeddings(torch.tensor(dataset.word2idx[token], dtype=torch.int)).detach().numpy() for token in tokens] #create embeddings for tokenized sentence\n",
+    "    sentence_embeds = [dataset.word2vec.embeddings(torch.tensor(dataset.word2idx[token], dtype=torch.long)).detach().numpy() for token in tokens] #create embeddings for tokenized sentence\n",
     "\n",
     "    predicted_tokens = []\n",
     "    for _ in range(num_tokens):\n",
@@ -513,7 +513,7 @@
     "        predicted_idx = torch.argmax(output).item()\n",
     "        predicted_token = dataset.idx2word[predicted_idx]\n",
     "        predicted_tokens.append(predicted_token)\n",
-    "        sentence_embeds.append(dataset.word2vec.embeddings(torch.tensor(predicted_idx, dtype=torch.int)).detach().numpy())\n",
+    "        sentence_embeds.append(dataset.word2vec.embeddings(torch.tensor(predicted_idx, dtype=torch.long)).detach().numpy())\n",
     "    \n",
     "    return predicted_tokens"
    ]
@@ -547,7 +547,7 @@
     "        predicted_words.append(next_word)\n",
     "\n",
     "        tokens.append(next_word)\n",
-    "        sentence_embeds.append(dataset.word2vec.embeddings(torch.tensor(next_word_idx, dtype=torch.int)).detach().numpy())\n",
+    "        sentence_embeds.append(dataset.word2vec.embeddings(torch.tensor(next_word_idx, dtype=torch.long)).detach().numpy())\n",
     "\n",
     "\n",
     "print(\" \".join(predicted_words))"
