combined training and testing pipeline for task3

--- a/assignment1/task3-files/temp.ipynb
+++ b/assignment1/task3-files/temp.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
-    "from Task1.task1 import WordPieceTokenizer\n",
-    "from Task2.task import Word2VecModel\n",
+    "from task1 import WordPieceTokenizer\n",
+    "from task2 import Word2VecModel\n",
     "import pickle\n",
     "\n",
     "\n",
     "# Neural LM Dataset class\n",
     "class NeuralLMDataset(Dataset):\n",
     "    def __init__(self, tokenizer, word2vec, context_size=3):\n",
+    "        self.pad_token = '[PAD]'\n",
     "        self.tokenizer = tokenizer\n",
     "        self.word2vec = word2vec\n",
     "        self.context_size = context_size\n",
@@ -71,7 +72,7 @@
     "        # self.tokenize_txt_file(\"corpus.txt\", \"tokenized_corpus.json\")\n",
     "\n",
     "        corpus = None\n",
-    "        with open(r'D:\\nlp\\assignment1\\task2\\tokenized_corpus.json', 'r') as f:\n",
+    "        with open('task2-files/tokenized_corpus.json', 'r') as f:\n",
     "            # Load the JSON data\n",
     "            tokenized_corpus = json.load(f)\n",
     "            \n",
@@ -137,19 +138,6 @@
     "        x = self.fc2(x)\n",
     "        out = x + identity\n",
     "        return out\n",
-    "\n",
-    "# class NeuralLM2(nn.Module):\n",
-    "#     def __init__(self, vocab_size, embedding_dim, hidden_dim):\n",
-    "#         super(NeuralLM2, self).__init__()\n",
-    "#         self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
-    "#         self.fc1 = nn.Linear(embedding_dim * 2, hidden_dim)\n",
-    "#         self.tanh = nn.Tanh()\n",
-    "#         self.fc2 = nn.Linear(hidden_dim, vocab_size)\n",
-    "    \n",
-    "#     def forward(self, x):\n",
-    "#         x = self.embedding(x).view(x.shape[0], -1)\n",
-    "#         x = self.tanh(self.fc1(x))\n",
-    "#         return self.fc2(x)\n",
     "\n",
     "class NeuralLM3(nn.Module):\n",
     "    def __init__(self, input_dim, hidden_dim, vocab_size):\n",
@@ -247,37 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d:\\nlp\\assignment1\\task3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\nlp\\nlpenv\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd task3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_model(final_model_dir, model_class):\n",
-    "    model_path = r'D:\\nlp\\assignment1\\Task2\\final_model\\final_model.pt'\n",
+    "def load_model(model_class):\n",
+    "    model_path = 'task2-files/final_model/final_model.pt'\n",
     "    checkpoint = torch.load(model_path)\n",
     "    \n",
     "    model = model_class(vocab_size=checkpoint['vocab_size'], embedding_dim=checkpoint['embedding_dim'])\n",
@@ -288,23 +251,17 @@
     "    \n",
     "    return model, val_loss, val_accuracy\n",
     "\n",
-    "def load_vocabulary(final_model_dir):\n",
-    "    vocab_path = r'D:\\nlp\\assignment1\\Task2\\final_model\\vocabulary.json'\n",
-    "    with open(vocab_path, 'r') as f:\n",
-    "        vocab_data = json.load(f)\n",
-    "    return vocab_data['word2idx'], vocab_data['idx2word']\n",
     "\n",
     "\n",
     "# Example usage:\n",
-    "word2vec, val_loss, val_accuracy = load_model('final_model', Word2VecModel)\n",
-    "# word2idx, idx2word = load_vocabulary('final_model')\n",
-    "tokenizer = pickle.load(open(r'D:\\nlp\\assignment1\\Task1\\token.pkl', 'rb'))\n",
+    "word2vec, val_loss, val_accuracy = load_model(Word2VecModel)\n",
+    "tokenizer = pickle.load(open('task1-files/tokenizer.pkl', 'rb'))\n",
     "dataset = NeuralLMDataset(tokenizer, word2vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -336,35 +293,35 @@
      "output_type": "stream",
      "text": [
       "----- Epoch 1/10 -----\n",
-      "Train Loss: 5.1207, Train Accuracy: 30.21%\n",
-      "Val Loss: 4.7340, Val Accuracy: 32.51%\n",
+      "Train Loss: 5.0361, Train Accuracy: 30.58%\n",
+      "Val Loss: 4.5890, Val Accuracy: 32.82%\n",
       "----- Epoch 2/10 -----\n",
-      "Train Loss: 4.3979, Train Accuracy: 32.86%\n",
-      "Val Loss: 4.7418, Val Accuracy: 34.37%\n",
+      "Train Loss: 4.2373, Train Accuracy: 33.82%\n",
+      "Val Loss: 4.5768, Val Accuracy: 34.85%\n",
       "----- Epoch 3/10 -----\n",
-      "Train Loss: 4.2387, Train Accuracy: 33.28%\n",
-      "Val Loss: 4.7891, Val Accuracy: 34.07%\n",
+      "Train Loss: 4.0814, Train Accuracy: 34.32%\n",
+      "Val Loss: 4.6326, Val Accuracy: 35.26%\n",
       "----- Epoch 4/10 -----\n",
-      "Train Loss: 4.1774, Train Accuracy: 33.43%\n",
-      "Val Loss: 4.8414, Val Accuracy: 33.60%\n",
+      "Train Loss: 4.0078, Train Accuracy: 34.85%\n",
+      "Val Loss: 4.6621, Val Accuracy: 33.89%\n",
       "----- Epoch 5/10 -----\n",
-      "Train Loss: 4.1237, Train Accuracy: 33.95%\n",
-      "Val Loss: 4.9385, Val Accuracy: 34.76%\n",
+      "Train Loss: 3.9597, Train Accuracy: 35.17%\n",
+      "Val Loss: 4.6598, Val Accuracy: 34.20%\n",
       "----- Epoch 6/10 -----\n",
-      "Train Loss: 4.0841, Train Accuracy: 34.39%\n",
-      "Val Loss: 4.9639, Val Accuracy: 34.66%\n",
+      "Train Loss: 3.9167, Train Accuracy: 35.64%\n",
+      "Val Loss: 4.7167, Val Accuracy: 35.03%\n",
       "----- Epoch 7/10 -----\n",
-      "Train Loss: 4.0385, Train Accuracy: 34.56%\n",
-      "Val Loss: 5.0309, Val Accuracy: 34.84%\n",
+      "Train Loss: 3.8800, Train Accuracy: 35.86%\n",
+      "Val Loss: 4.7762, Val Accuracy: 34.52%\n",
       "----- Epoch 8/10 -----\n",
-      "Train Loss: 4.0318, Train Accuracy: 34.71%\n",
-      "Val Loss: 5.0200, Val Accuracy: 34.56%\n",
+      "Train Loss: 3.8325, Train Accuracy: 36.22%\n",
+      "Val Loss: 4.8016, Val Accuracy: 34.39%\n",
       "----- Epoch 9/10 -----\n",
-      "Train Loss: 4.0157, Train Accuracy: 34.82%\n",
-      "Val Loss: 5.0905, Val Accuracy: 32.84%\n",
+      "Train Loss: 3.8169, Train Accuracy: 36.70%\n",
+      "Val Loss: 4.7968, Val Accuracy: 35.80%\n",
       "----- Epoch 10/10 -----\n",
-      "Train Loss: 3.9818, Train Accuracy: 35.01%\n",
-      "Val Loss: 5.1010, Val Accuracy: 35.08%\n"
+      "Train Loss: 3.7767, Train Accuracy: 36.71%\n",
+      "Val Loss: 4.8006, Val Accuracy: 35.19%\n"
      ]
     }
    ],
@@ -375,46 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----- Epoch 1/10 -----\n",
-      "Train Loss: 4.8666, Train Accuracy: 30.38%\n",
-      "Val Loss: 4.4216, Val Accuracy: 33.91%\n",
-      "----- Epoch 2/10 -----\n",
-      "Train Loss: 3.9814, Train Accuracy: 33.80%\n",
-      "Val Loss: 4.4708, Val Accuracy: 35.10%\n",
-      "----- Epoch 3/10 -----\n",
-      "Train Loss: 3.7612, Train Accuracy: 34.47%\n",
-      "Val Loss: 4.5645, Val Accuracy: 35.03%\n",
-      "----- Epoch 4/10 -----\n",
-      "Train Loss: 3.6314, Train Accuracy: 35.21%\n",
-      "Val Loss: 4.6657, Val Accuracy: 35.17%\n",
-      "----- Epoch 5/10 -----\n",
-      "Train Loss: 3.5436, Train Accuracy: 35.71%\n",
-      "Val Loss: 4.7359, Val Accuracy: 35.28%\n",
-      "----- Epoch 6/10 -----\n",
-      "Train Loss: 3.4774, Train Accuracy: 36.16%\n",
-      "Val Loss: 4.8305, Val Accuracy: 35.65%\n",
-      "----- Epoch 7/10 -----\n",
-      "Train Loss: 3.4195, Train Accuracy: 36.88%\n",
-      "Val Loss: 4.9105, Val Accuracy: 35.15%\n",
-      "----- Epoch 8/10 -----\n",
-      "Train Loss: 3.3773, Train Accuracy: 37.08%\n",
-      "Val Loss: 4.9773, Val Accuracy: 35.74%\n",
-      "----- Epoch 9/10 -----\n",
-      "Train Loss: 3.3376, Train Accuracy: 37.52%\n",
-      "Val Loss: 5.0440, Val Accuracy: 34.87%\n",
-      "----- Epoch 10/10 -----\n",
-      "Train Loss: 3.3066, Train Accuracy: 37.80%\n",
-      "Val Loss: 5.1115, Val Accuracy: 35.08%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model2 = NeuralLM2(input_dim=30, hidden_dim=256, vocab_size=8500)\n",
     "train(model2, train_loader, val_loader, epochs=NUM_EPOCHS, lr=LEARNING_RATE)"
@@ -422,46 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----- Epoch 1/10 -----\n",
-      "Train Loss: 4.7709, Train Accuracy: 31.32%\n",
-      "Val Loss: 4.2545, Val Accuracy: 34.16%\n",
-      "----- Epoch 2/10 -----\n",
-      "Train Loss: 4.0447, Train Accuracy: 33.99%\n",
-      "Val Loss: 4.2109, Val Accuracy: 34.89%\n",
-      "----- Epoch 3/10 -----\n",
-      "Train Loss: 3.8412, Train Accuracy: 34.51%\n",
-      "Val Loss: 4.2294, Val Accuracy: 35.99%\n",
-      "----- Epoch 4/10 -----\n",
-      "Train Loss: 3.6988, Train Accuracy: 34.83%\n",
-      "Val Loss: 4.2468, Val Accuracy: 35.67%\n",
-      "----- Epoch 5/10 -----\n",
-      "Train Loss: 3.5924, Train Accuracy: 35.17%\n",
-      "Val Loss: 4.2858, Val Accuracy: 35.79%\n",
-      "----- Epoch 6/10 -----\n",
-      "Train Loss: 3.5182, Train Accuracy: 35.45%\n",
-      "Val Loss: 4.3241, Val Accuracy: 36.22%\n",
-      "----- Epoch 7/10 -----\n",
-      "Train Loss: 3.4511, Train Accuracy: 35.89%\n",
-      "Val Loss: 4.3781, Val Accuracy: 36.27%\n",
-      "----- Epoch 8/10 -----\n",
-      "Train Loss: 3.3985, Train Accuracy: 36.17%\n",
-      "Val Loss: 4.4050, Val Accuracy: 36.57%\n",
-      "----- Epoch 9/10 -----\n",
-      "Train Loss: 3.3631, Train Accuracy: 36.31%\n",
-      "Val Loss: 4.4284, Val Accuracy: 36.33%\n",
-      "----- Epoch 10/10 -----\n",
-      "Train Loss: 3.3254, Train Accuracy: 36.55%\n",
-      "Val Loss: 4.4729, Val Accuracy: 36.86%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model3 = NeuralLM3(input_dim=30, hidden_dim=256, vocab_size=8500)\n",
     "train(model3, train_loader, val_loader, epochs=NUM_EPOCHS, lr=LEARNING_RATE)"
@@ -493,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +385,8 @@
     "\n",
     "    tokens = dataset.tokenizer.tokenize(sentence) #tokenize the input sentence\n",
     "    if len(tokens) < context_size:\n",
-    "        pass #add padding tokens\n",
+    "        tokens = [dataset.pad_token] * (context_size - len(tokens)) + tokens #add padding tokens\n",
+    "\n",
     "    sentence_embeds = [dataset.word2vec.embeddings(torch.tensor(dataset.word2idx[token], dtype=torch.long)).detach().numpy() for token in tokens] #create embeddings for tokenized sentence\n",
     "\n",
     "    predicted_tokens = []\n",
@@ -520,12 +404,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "['[PAD]', '[PAD]', '[PAD]']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['##e', '##r', '##e']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_tokens('', 3, 3, dataset, model1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prediciton_pipeline():\n",
-    "    pass"
+    "def prediciton_pipeline(input_file, num_tokens, context_size, dataset, model):\n",
+    "    with open(input_file, 'r') as f:\n",
+    "        sentences = f.readlines()\n",
+    "    for sentence in sentences:\n",
+    "        sentence = sentence.strip()\n",
+    "        predicted_tokens = predict_tokens(sentence, num_tokens, context_size, dataset, model)\n",
+    "        print(f\"Input: {sentence}\")\n",
+    "        print(f\"Predicted Tokens: {' '.join(predicted_tokens)}\")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: i felt like earlier this year i was starting to feel emotional that it\n",
+      "Predicted Tokens: was ##e ##s\n",
+      "\n",
+      "Input: i do need constant reminders when i go through lulls in feeling submiss\n",
+      "Predicted Tokens: ##e ##r ##e\n",
+      "\n",
+      "Input: i was really feeling crappy even after my awesome\n",
+      "Predicted Tokens: ##ng ##e ##d\n",
+      "\n",
+      "Input: i finally realise the feeling of being hated and its after effects are\n",
+      "Predicted Tokens: ##ntim ##e ##d\n",
+      "\n",
+      "Input: i am feeling unhappy and weird\n",
+      "Predicted Tokens: ##e ##r ##e\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediciton_pipeline('task3-files/sample_test.txt', 3, 3, dataset, model1)"
    ]
   },
   {
