organized and documented code for task3

--- a/assignment1/task3-files/temp.ipynb
+++ b/assignment1/task3-files/temp.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,9 @@
     "        # print(f\"Train Loss: {train_losses[-1]:.4f}, Val Loss: {val_losses[-1]:.4f}\")\n",
     "        print(f\"Train Loss: {train_losses[-1]:.4f}, Train Accuracy: {train_acc[-1]:.2f}%\")\n",
     "        print(f\"Val Loss: {val_losses[-1]:.4f}, Val Accuracy: {val_acc[-1]:.2f}%\")\n",
-    "\n",
+    "    print(type(train_losses[-1]))\n",
+    "    print(type(output))\n",
+    "    print(type(target))\n",
     "    # return train_losses, train_acc, val_losses, val_acc #return losses\n",
     "\n",
     "# Plot loss function\n",
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,8 +253,6 @@
     "    \n",
     "    return model, val_loss, val_accuracy\n",
     "\n",
-    "\n",
-    "\n",
     "# Example usage:\n",
     "word2vec, val_loss, val_accuracy = load_model(Word2VecModel)\n",
     "tokenizer = pickle.load(open('task1-files/tokenizer.pkl', 'rb'))\n",
@@ -261,22 +261,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "WINDOW_SIZE = 2\n",
     "BATCH_SIZE = 1024\n",
-    "NUM_EPOCHS = 10\n",
+    "NUM_EPOCHS = 1\n",
     "LEARNING_RATE = 0.02\n",
     "TRAIN_SPLIT = 0.8\n",
     "\n",
     "# Split dataset into training and validation\n",
-    "train_size = int(TRAIN_SPLIT * len(dataset))\n",
-    "val_size = len(dataset) - train_size\n",
-    "train_dataset, val_dataset = torch.utils.data.random_split(\n",
-    "    dataset, [train_size, val_size]\n",
-    ")\n",
+    "train_dataset, val_dataset = torch.utils.data.random_split(dataset=dataset, lengths=[TRAIN_SPLIT, 1-TRAIN_SPLIT], generator=torch.Generator().manual_seed(42))\n",
     "\n",
     "# Create data loaders\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
@@ -285,43 +281,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----- Epoch 1/10 -----\n",
-      "Train Loss: 5.0361, Train Accuracy: 30.58%\n",
-      "Val Loss: 4.5890, Val Accuracy: 32.82%\n",
-      "----- Epoch 2/10 -----\n",
-      "Train Loss: 4.2373, Train Accuracy: 33.82%\n",
-      "Val Loss: 4.5768, Val Accuracy: 34.85%\n",
-      "----- Epoch 3/10 -----\n",
-      "Train Loss: 4.0814, Train Accuracy: 34.32%\n",
-      "Val Loss: 4.6326, Val Accuracy: 35.26%\n",
-      "----- Epoch 4/10 -----\n",
-      "Train Loss: 4.0078, Train Accuracy: 34.85%\n",
-      "Val Loss: 4.6621, Val Accuracy: 33.89%\n",
-      "----- Epoch 5/10 -----\n",
-      "Train Loss: 3.9597, Train Accuracy: 35.17%\n",
-      "Val Loss: 4.6598, Val Accuracy: 34.20%\n",
-      "----- Epoch 6/10 -----\n",
-      "Train Loss: 3.9167, Train Accuracy: 35.64%\n",
-      "Val Loss: 4.7167, Val Accuracy: 35.03%\n",
-      "----- Epoch 7/10 -----\n",
-      "Train Loss: 3.8800, Train Accuracy: 35.86%\n",
-      "Val Loss: 4.7762, Val Accuracy: 34.52%\n",
-      "----- Epoch 8/10 -----\n",
-      "Train Loss: 3.8325, Train Accuracy: 36.22%\n",
-      "Val Loss: 4.8016, Val Accuracy: 34.39%\n",
-      "----- Epoch 9/10 -----\n",
-      "Train Loss: 3.8169, Train Accuracy: 36.70%\n",
-      "Val Loss: 4.7968, Val Accuracy: 35.80%\n",
-      "----- Epoch 10/10 -----\n",
-      "Train Loss: 3.7767, Train Accuracy: 36.71%\n",
-      "Val Loss: 4.8006, Val Accuracy: 35.19%\n"
+      "<class 'numpy.float64'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(compute_perplexity(0.12)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Epoch 1/1 -----\n",
+      "Train Loss: 4.9545, Train Accuracy: 31.20%\n",
+      "Val Loss: 4.5821, Val Accuracy: 32.49%\n",
+      "<class 'float'>\n",
+      "<class 'torch.Tensor'>\n",
+      "<class 'torch.Tensor'>\n"
      ]
     }
    ],
@@ -361,21 +350,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence = \"The weather is\"\n",
-    "model.eval()\n",
-    "tokens = tokenizer.tokenize(sentence)\n",
-    "sentence_embeds = [dataset.word2vec.embeddings(torch.tensor(dataset.word2idx[token], dtype=torch.long)).detach().numpy() for token in tokens]\n",
-    "context = sentence_embeds[-3:]\n",
-    "context = torch.tensor(np.concatenate(context).flatten(), dtype=torch.float32).unsqueeze(0)  # Add batch dim\n",
-    "print(context.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -404,28 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "['[PAD]', '[PAD]', '[PAD]']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['##e', '##r', '##e']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predict_tokens('', 3, 3, dataset, model1)"
    ]
@@ -449,31 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input: i felt like earlier this year i was starting to feel emotional that it\n",
-      "Predicted Tokens: was ##e ##s\n",
-      "\n",
-      "Input: i do need constant reminders when i go through lulls in feeling submiss\n",
-      "Predicted Tokens: ##e ##r ##e\n",
-      "\n",
-      "Input: i was really feeling crappy even after my awesome\n",
-      "Predicted Tokens: ##ng ##e ##d\n",
-      "\n",
-      "Input: i finally realise the feeling of being hated and its after effects are\n",
-      "Predicted Tokens: ##ntim ##e ##d\n",
-      "\n",
-      "Input: i am feeling unhappy and weird\n",
-      "Predicted Tokens: ##e ##r ##e\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prediciton_pipeline('task3-files/sample_test.txt', 3, 3, dataset, model1)"
    ]
